prevent user block from flickering on phones

--- a/app/assets/stylesheets/pages/p-dashboards/show_v2.sass
+++ b/app/assets/stylesheets/pages/p-dashboards/show_v2.sass
@@ -30,6 +30,7 @@
     .f-user
       +iphone
         +block2
+        min-height: 121px
 
       +gte_ipad
         width: 270px
